CICD-DevSecOps/Codes/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: ClusterIP
  clusterIP: None            # headless for direct pod addressing if desired
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  selector:
    app: mysql
